# pjme

./: README.md  pyproject.toml
notebooks/: 000_prophet_seminar.ipynb  001_eda.ipynb  002_prophet_baseline_model.ipynb  003_prophet_2nd_model.ipynb  004_prophet_3rd_model.ipynb  005_prophet_4th_model.ipynb  eda.ipynb
src/: lgb.py  processing.py  prophet.py
src/pjme/: __init__.py
