[project]
name = "pjme"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shyu61", email = "ohs6261@gmail.com" }
]
dependencies = [
    "pandas>=2.0.3",
    "numpy>=1.24.4",
    "ipykernel>=6.27.1",
    "polars>=0.19.19",
    "seaborn>=0.13.0",
    "matplotlib>=3.7.4",
    "prophet>=1.1.5",
    "scikit-learn>=1.3.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
